--- a/index.html
+++ b/index.html
@@ -137,6 +137,31 @@ We do not have any short-term positions at this time.
 <div class="section">
 <h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2022<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
+<div class="paper" id="eccv22relpose" data-selected="y">
+<img class="paper" src="./figures/eccv22relpose.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">RelPose: Predicting Probabilistic Relative Rotation for Single Objects in the Wild</b> <br/> 
+Jason Y. Zhang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
+ECCV, 2022 <br/> 
+<a href="https://jasonyzhang.com/relpose/resources/Relpose_ECCV_2022.pdf">pdf </a>  &nbsp <a href="https://jasonyzhang.com/relpose/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv22relposeAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('eccv22relposeBib')">bibtex </a>  &nbsp <a href="https://github.com/jasonyzhang/relpose">code </a> </p>
+<div class="papermeta" id="eccv22relposeMeta">
+<em id="eccv22relposeAbs">We describe a data-driven method for inferring the camera viewpoints given multiple images of an arbitrary object. This task is a core component of classic geometric pipelines such as SfM and SLAM, and also serves as a vital pre-processing requirement for contemporary neural approaches (e.g. NeRF) to object reconstruction and view synthesis. In contrast to existing correspondence-driven methods that do not perform well given sparse views, we propose a top-down prediction based approach for estimating camera viewpoints. Our key technical insight is the use of an energy-based formulation for representing distributions over relative camera rotations, thus allowing us to explicitly represent multiple camera modes arising from object symmetries or views. Leveraging these relative predictions, we jointly estimate a consistent set of camera rotations from multiple images. We show that our approach outperforms state-of-the-art SfM and SLAM methods given sparse images on both seen and unseen categories. Further, our probabilistic approach significantly outperforms directly regressing relative poses, suggesting that modeling multimodality is important for coherent joint reconstruction. We demonstrate that our system can be a stepping stone toward in-the-wild reconstruction from multi-view datasets.</em>
+<pre xml:space="preserve" id="eccv22relposeBib">
+
+@InProceedings{zhang2022relpose,
+    title = {{RelPose}: Predicting Probabilistic Relative Rotation for Single Objects in the Wild},
+    author = {Zhang, Jason Y. and Ramanan, Deva and Tulsiani, Shubham},
+    booktitle = {European Conference on Computer Vision},
+    year = {2022}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('eccv22relposeAbs');
+hideblock('eccv22relposeBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr22ss3d" data-selected="y">
 <img class="paper" src="figures/cvpr22ss3d.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Pre-train, Self-train, Distill: A simple recipe for Supersizing 3D Reconstruction</b> <br/> 
@@ -187,7 +212,7 @@ hideblock('cvpr22ihoiBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr22autosdf" data-selected="n">
+<div class="paper" id="cvpr22autosdf" data-selected="y">
 <img class="paper" src="figures/cvpr22autosdf.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">AutoSDF: Shape Priors for 3D Completion, Reconstruction and Generation</b> <br/> 
 Paritosh Mittal*, Yen-Chi Cheng*, Maneesh Singh, <strong>Shubham Tulsiani</strong> <br/> 
@@ -214,7 +239,7 @@ hideblock('cvpr22autosdfBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="neurips21ners" data-selected="y">
 <img class="paper" src="figures/neurips21ners.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">NeRS: Neural Reflectance Surfaces for Sparse-view 3D Reconstruction in the Wild</b> <br/> 
+<p><b id="papertitle">NeRS: Neural Reflectance Surfaces for Sparse-view 3D Reconstruction in the Wild</b> <br/> 
 Jason Y. Zhang, Gengshan Yang, <strong>Shubham Tulsiani</strong>*, and Deva Ramanan* <br/> 
 NeurIPS, 2021 <br/> 
 <a href="https://arxiv.org/pdf/2110.07604">pdf </a>  &nbsp <a href="https://jasonyzhang.com/ners/">project page </a>  &nbsp <a href="javascript:toggleblock('neurips21nersAbs')">abstract </a>  &nbsp <a href="javascript:toggleblock('neurips21nersBib')">bibtex </a>  &nbsp <a href="https://youtu.be/zVyaw_sn1xM">video </a>  &nbsp <a href="https://github.com/jasonyzhang/ners">code </a> </p>
