--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   Prior to joining CMU, I was a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I previously graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros.</a>
   <p><br></p>
   <p>
-    <a href="javascript:toggleblock('email')">email</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a> | <a href="https://twitter.com/shubhtuls"> twitter </a> | <a href="https://shubhtuls.github.io/ai-classics-reading/"> reading group </a>
+    <a href="javascript:toggleblock('email')">email</a> | <a href="https://scholar.google.com/citations?user=06rffEkAAAAJ&hl=en">google scholar</a> | <a href="https://twitter.com/shubhtuls"> twitter </a>
   </p>
   <pre xml:space="preserve" id="email" style="font-size: 12px">
 
@@ -111,8 +111,8 @@ We do not have any short-term positions at this time.
     </td>
     <td>
       <b>MS Students</b><br><br>
-      <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a> (MSCV)<br>
-      <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a> (MSCV)<br>
+      <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> (MSCV)<br>
+      <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a> (MSCV)<br>
       <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> (MSR)
     </td>
   </tr>
@@ -127,6 +127,7 @@ We do not have any short-term positions at this time.
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
+  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2022 <br>
   <a href="https://learning3d.github.io/">16-889: Learning for 3D Vision</a>. Spring 2022
 </td></tr>
 </table>
