--- a/index.html
+++ b/index.html
@@ -104,16 +104,22 @@ We do not have any short-term positions at this time.
 </td></tr>
   <tr>
     <td rowspan="1" width="50%">
-      <b>PhD Students</b><br><br>
+      <b>PhD Students</b><br>
       <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (with Abhinav Gupta)<br>
       <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (with Abhinav Gupta)<br>
       <a href="https://jasonyzhang.com/">Jason Zhang</a>  (with Deva Ramanan)
     </td>
     <td>
-      <b>MS Students</b><br><br>
+      <b>MS Students</b><br>
       <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> (MSCV)<br>
       <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a> (MSCV)<br>
       <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> (MSR)
+    </td>
+  </tr>
+  <tr><td><br></td></tr>
+  <tr><td colspan="2"><b>Alumni</b><br>
+    <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a> (MSCV)<br>
+    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a> (MSCV)<br>
     </td>
   </tr>
   <tr><td></td></tr>
