--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <div class="section">
 <table>
   <tr valign="top"> <td style="width: 620px; vertical-align: top;">
-  I am an Assistant Professor at Carnegie Mellon University in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, where I am a part of the <a href+"http://vision.cs.cmu.edu/">Computer Vision group</a>. I am interested in building perception systems that can infer the spatial and physical structure of the world they observe. Please see these <a href = "https://www.youtube.com/watch?v=mg4D083EoIw">recent</a> <a href = "https://youtu.be/lAZyzI-_omM?t=108">talks</a> for an overview.
+  I am an Assistant Professor at Carnegie Mellon University in the <a href="https://www.ri.cmu.edu/">Robotics Institute</a>, where I am a part of the <a href="http://vision.cs.cmu.edu/">Computer Vision group</a>. I am interested in building perception systems that can infer the spatial and physical structure of the world they observe. Please see these <a href = "https://www.youtube.com/watch?v=mg4D083EoIw">recent</a> <a href = "https://youtu.be/lAZyzI-_omM?t=108">talks</a> for an overview.
   <p><br></p>
   Prior to joining CMU, I was a Research Scientist at <a href = "https://research.fb.com/category/facebook-ai-research/">FAIR</a>, Pittsburgh working with <a href = "https://www.cs.cmu.edu/~abhinavg/">Abhinav Gupta</a>. I previously graduated from UC, Berkeley where I was advised by <a href = "http://www.eecs.berkeley.edu/~malik">Jitendra Malik</a>, and also frequently collaborated with <a href = "http://www.eecs.berkeley.edu/~efros">Alyosha Efros.</a>
   <p><br></p>
