--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ We do not have any short-term positions at this time.
       <b>PhD Students</b><br>
       <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
-      <a href="https://www.ri.cmu.edu/ri-people/yehonathan-litman/">Yehonathan Litman</a>  (with  Fernando De la Torre) <br>
+      <a href="https://yehonathanlitman.github.io">Yehonathan Litman</a>  (with  Fernando De la Torre) <br>
       <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (with Abhinav Gupta)<br>
       <a href="https://jasonyzhang.com/">Jason Zhang</a>  (with Deva Ramanan)
     </td>
@@ -145,32 +145,55 @@ We do not have any short-term positions at this time.
 </div>
 
 <div class="section">
-<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>Pre-prints<hr width="220px" align="left"></div>
+<h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2023<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
-<div class="paper" id="arxiv23sparsefusion" data-selected="y">
-<img class="paper" src="figures/arxiv23sparsefusion.gif" />
+<div class="paper" id="cvpr23sparsefusion" data-selected="y">
+<img class="paper" src="figures/cvpr23sparsefusion.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">SparseFusion: Distilling View-conditioned Diffusion for 3D Reconstruction</b> <br/> 
 Zhizhuo Zhou, <strong>Shubham Tulsiani</strong> <br/> 
-arXiv preprint, 2022 <br/> 
-<a href="https://arxiv.org/pdf/2212.00792">pdf </a>  &nbsp <a href="https://sparsefusion.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('arxiv23sparsefusionBib')">bibtex </a>  &nbsp <a href="https://github.com/zhizdev/sparsefusion">code </a> </p>
-<div class="papermeta" id="arxiv23sparsefusionMeta">
-<pre xml:space="preserve" id="arxiv23sparsefusionBib">
+CVPR, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2212.00792">pdf </a>  &nbsp <a href="https://sparsefusion.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr23sparsefusionBib')">bibtex </a>  &nbsp <a href="https://github.com/zhizdev/sparsefusion">code </a> </p>
+<div class="papermeta" id="cvpr23sparsefusionMeta">
+<pre xml:space="preserve" id="cvpr23sparsefusionBib">
 
-@article{zhou2023sparsefusion,
+@inproceedings{zhou2023sparsefusion,
   title={SparseFusion: Distilling View-conditioned Diffusion for 3D Reconstruction}, 
   author={Zhizhuo Zhou and Shubham Tulsiani},
-  journal={arXiv preprint arXiv:2212.00792},
-  year={2022}
+  booktitle={CVPR},
+  year={2023}
 }</pre></td>
 <script language="javascript" type="text/javascript" xml:space="preserve">
-hideblock('arxiv23sparsefusionBib');
+hideblock('cvpr23sparsefusionBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="cvpr23affordance" data-selected="y">
+<img class="paper" src="figures/cvpr23affordance.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Affordance Diffusion: Synthesizing Hand-Object Interactions</b> <br/> 
+Yufei Ye, Xueting Li, Abhinav Gupta, Shalini De Mello, Stan Birchfield, Jiaming Song, <strong>Shubham Tulsiani</strong>, Sifei Liu <br/> 
+CVPR, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2303.12538">pdf </a>  &nbsp <a href="https://judyye.github.io/affordiffusion-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr23affordanceBib')">bibtex </a> </p>
+<div class="papermeta" id="cvpr23affordanceMeta">
+<pre xml:space="preserve" id="cvpr23affordanceBib">
+
+@inproceedings{ye2023affordance,
+  title={Affordance Diffusion: Synthesizing Hand-Object Interactions}, 
+  author={Yufei Ye and Xueting Li and Abhinav Gupta  and Shalini De Mello  and Stan Birchfield, Jiaming Song and Shubham Tulsiani and Sifei Liu},
+  booktitle={CVPR},
+  year={2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('cvpr23affordanceBib');
 </script>
 </div>
 </div>
 <!--------------------------------------------------------------------------->
 <div class="year_heading" data-selected="n"><br>2022<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
-<div class="paper" id="neurips22dycheck" data-selected="y">
+<div class="paper" id="neurips22dycheck" data-selected="n">
 <img class="paper" src="figures/neurips22dycheck.gif" />
 <p> <strong style="color:red">[New]</strong> <b id="papertitle">Monocular Dynamic View Synthesis: A Reality Check</b> <br/> 
 Hang Gao, Ruilong Li, <strong>Shubham Tulsiani</strong>, Bryan Russell, Angjoo Kanazawa <br/> 
@@ -266,7 +289,7 @@ hideblock('cvpr22ihoiBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr22autosdf" data-selected="n">
+<div class="paper" id="cvpr22autosdf" data-selected="y">
 <img class="paper" src="figures/cvpr22autosdf.gif" />
 <p><b id="papertitle">AutoSDF: Shape Priors for 3D Completion, Reconstruction and Generation</b> <br/> 
 Paritosh Mittal*, Yen-Chi Cheng*, Maneesh Singh, <strong>Shubham Tulsiani</strong> <br/> 
