--- a/index.html
+++ b/index.html
@@ -113,16 +113,17 @@ We do not have any short-term positions at this time.
     </td>
     <td>
       <b>MS Students</b><br>
-      <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> (MSCV)<br>
       <a href="https://thatbrguy.github.io/">Bharath Raj</a> (MSR)<br>
-      <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a> (MSCV)<br>
-      <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a> (MSR)
+      <a href="https://poorvirhebbar.github.io/">Poorvi Hebbar</a> (MSCV)<br>
     </td>
   </tr>
   <tr><td><br></td></tr>
   <tr><td colspan="2"><b>Alumni</b><br>
-    <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a> (MSCV)<br>
-    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a> (MSCV)<br>
+    <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a>, 
+    <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
+    <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> <br>
+    <a href="https://yccyenchicheng.github.io/">Yen-Chi Cheng</a>, 
+    <a href="https://paritoshmittal12.github.io/">Paritosh Mittal</a><br>
     </td>
   </tr>
   <tr><td></td></tr>
@@ -136,7 +137,7 @@ We do not have any short-term positions at this time.
 <br>
 <table width="90%" width="90%" align="center" border="0" cellspacing="0" cellpadding="8" style="margin-left:15px">
 <tr><td colspan="2">
-  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2022 <br>
+  <a href="https://geometric3d.github.io/">16-822: Geometry-based Methods in Vision</a>. Fall 2022, Fall 2023 <br>
   <a href="https://learning3d.github.io/">16-825: Learning for 3D Vision</a>. Spring 2022, Spring 2023
 </td></tr>
 </table>
@@ -147,9 +148,101 @@ We do not have any short-term positions at this time.
 <div class="section">
 <h2> Publications (<a href="javascript:showselected()" id="select" >selected</a> | <a href="javascript:showall()" id="unselect" >all</a>) </h2><br><div class="year_heading" data-selected="n"><br>2023<hr width="220px" align="left"></div>
 <!--------------------------------------------------------------------------->
+<div class="paper" id="iccv23diffhoi" data-selected="y">
+<img class="paper" src="https://judyye.github.io/data/iccv23.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Diffusion-Guided Reconstruction of Everyday Hand-Object Interaction Clips</b> <br/> 
+Yufei Ye, Poorvi Hebbar, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
+ICCV, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2309.05663.pdf">pdf </a>  &nbsp <a href="https://judyye.github.io/diffhoi-www/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23diffhoiBib')">bibtex </a>  &nbsp <a href="https://github.com/JudyYe/diffhoi">code </a> </p>
+<div class="papermeta" id="iccv23diffhoiMeta">
+<pre xml:space="preserve" id="iccv23diffhoiBib">
+
+@inproceedings{ye2023vhoi,
+        author = {Ye, Yufei and Hebbar, Poorvi and Gupta, Abhinav and Tulsiani, Shubham}
+        title = {Diffusion-Guided Reconstruction of Everyday Hand-Object Interaction Clips},
+        booktitle = {ICCV},
+        year = {2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iccv23diffhoiBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="iccv23control" data-selected="n">
+<img class="paper" src="https://sudeepdasari.github.io/research/manipulate_by_seeing/test.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Manipulate by Seeing: Creating Manipulation Controllers from Pre-Trained Representations</b> <br/> 
+Jianren Wang*, Sudeep Dasari*, Mohan Kumar Srirama, <strong>Shubham Tulsiani</strong>, Abhinav Gupta <br/> 
+ICCV, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2303.08135">pdf </a>  &nbsp <a href="https://agi-labs.github.io/manipulate-by-seeing/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23controlBib')">bibtex </a>  &nbsp <a href="https://github.com/AGI-Labs/manipulate-by-seeing">code </a> </p>
+<div class="papermeta" id="iccv23controlMeta">
+<pre xml:space="preserve" id="iccv23controlBib">
+
+@article{wang2023manipulate,
+  title={Manipulate by Seeing: Creating Manipulation Controllers from Pre-Trained Representations},
+  author={Wang, Jianren and Dasari, Sudeep and Srirama, Mohan Kumar and Tulsiani, Shubham and Gupta, Abhinav},
+  booktitle={International Conference on Computer Vision (ICCV)},
+  year={2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iccv23controlBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="iccv23texture" data-selected="n">
+<img class="paper" src="figures/iccv23texture.png" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Mesh2Tex: Generating Mesh Textures from Image Queries</b> <br/> 
+Alexey Bokhovkin, <strong>Shubham Tulsiani</strong>, Angela Dai <br/> 
+ICCV, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2304.05868">pdf </a>  &nbsp <a href="https://alexeybokhovkin.github.io/mesh2tex/">project page </a>  &nbsp <a href="javascript:toggleblock('iccv23textureBib')">bibtex </a> </p>
+<div class="papermeta" id="iccv23textureMeta">
+<pre xml:space="preserve" id="iccv23textureBib">
+
+@inproceedings{ye2023vhoi,
+        title     = {Mesh2Tex: Generating Mesh Textures from Image Queries},
+        author    = {Bokhovkin, Alexey and Tulsiani, Shubham and Dai, Angela},
+        booktitle = {ICCV},
+        year = {2023}
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iccv23textureBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="icra23affordance" data-selected="n">
+<img class="paper" src="https://homangab.github.io/pics/affordance.png" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Visual Affordance Prediction for Guiding Robot Exploration</b> <br/> 
+Homanga Bharadhwaj, Abhinav Gupta, <strong>Shubham Tulsiani</strong> <br/> 
+ICRA, 2023 <br/> 
+<a href="https://homangab.github.io/papers/affordance_exploration_icra.pdf">pdf </a>  &nbsp <a href="https://sites.google.com/andrew.cmu.edu/affordance-robotics/home">project page </a>  &nbsp <a href="javascript:toggleblock('icra23affordanceBib')">bibtex </a>  &nbsp <a href="https://github.com/homangab/visual_affordance_robot_exploration">code </a> </p>
+<div class="papermeta" id="icra23affordanceMeta">
+<pre xml:space="preserve" id="icra23affordanceBib">
+
+@article{BharadhwajVisual,	
+  Author = {Homanga Bharadhwaj and Abhinav Gupta and Shubham Tulsiani},	
+  Journal={IEEE International Conference on Robotics and Automation (ICRA)},	
+  Year = {2023},	
+  Title = {Visual Affordance Prediction for Guiding Robot Exploration}	
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('icra23affordanceBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
 <div class="paper" id="cvpr23sparsefusion" data-selected="y">
 <img class="paper" src="figures/cvpr23sparsefusion.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">SparseFusion: Distilling View-conditioned Diffusion for 3D Reconstruction</b> <br/> 
+<p><b id="papertitle">SparseFusion: Distilling View-conditioned Diffusion for 3D Reconstruction</b> <br/> 
 Zhizhuo Zhou, <strong>Shubham Tulsiani</strong> <br/> 
 CVPR, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2212.00792">pdf </a>  &nbsp <a href="https://sparsefusion.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr23sparsefusionBib')">bibtex </a>  &nbsp <a href="https://github.com/zhizdev/sparsefusion">code </a> </p>
@@ -170,9 +263,9 @@ hideblock('cvpr23sparsefusionBib');
 <!--------------------------------------------------------------------------->
 
 <!--------------------------------------------------------------------------->
-<div class="paper" id="cvpr23affordance" data-selected="y">
+<div class="paper" id="cvpr23affordance" data-selected="n">
 <img class="paper" src="figures/cvpr23affordance.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Affordance Diffusion: Synthesizing Hand-Object Interactions</b> <br/> 
+<p><b id="papertitle">Affordance Diffusion: Synthesizing Hand-Object Interactions</b> <br/> 
 Yufei Ye, Xueting Li, Abhinav Gupta, Shalini De Mello, Stan Birchfield, Jiaming Song, <strong>Shubham Tulsiani</strong>, Sifei Liu <br/> 
 CVPR, 2023 <br/> 
 <a href="https://arxiv.org/pdf/2303.12538">pdf </a>  &nbsp <a href="https://judyye.github.io/affordiffusion-www/">project page </a>  &nbsp <a href="javascript:toggleblock('cvpr23affordanceBib')">bibtex </a> </p>
@@ -195,7 +288,7 @@ hideblock('cvpr23affordanceBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="neurips22dycheck" data-selected="n">
 <img class="paper" src="figures/neurips22dycheck.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">Monocular Dynamic View Synthesis: A Reality Check</b> <br/> 
+<p><b id="papertitle">Monocular Dynamic View Synthesis: A Reality Check</b> <br/> 
 Hang Gao, Ruilong Li, <strong>Shubham Tulsiani</strong>, Bryan Russell, Angjoo Kanazawa <br/> 
 NeurIPS, 2022 <br/> 
 <a href="https://arxiv.org/pdf/2210.13445">pdf </a>  &nbsp <a href="https://hangg7.com/dycheck/">project page </a>  &nbsp <a href="javascript:toggleblock('neurips22dycheckBib')">bibtex </a>  &nbsp <a href="https://github.com/KAIR-BAIR/dycheck/">code </a> </p>
@@ -222,7 +315,7 @@ hideblock('neurips22dycheckBib');
 <!--------------------------------------------------------------------------->
 <div class="paper" id="eccv22relpose" data-selected="y">
 <img class="paper" src="./figures/eccv22relpose.gif" />
-<p> <strong style="color:red">[New]</strong> <b id="papertitle">RelPose: Predicting Probabilistic Relative Rotation for Single Objects in the Wild</b> <br/> 
+<p><b id="papertitle">RelPose: Predicting Probabilistic Relative Rotation for Single Objects in the Wild</b> <br/> 
 Jason Y. Zhang, Deva Ramanan, <strong>Shubham Tulsiani</strong> <br/> 
 ECCV, 2022 <br/> 
 <a href="https://jasonyzhang.com/relpose/resources/Relpose_ECCV_2022.pdf">pdf </a>  &nbsp <a href="https://jasonyzhang.com/relpose/">project page </a>  &nbsp <a href="javascript:toggleblock('eccv22relposeBib')">bibtex </a>  &nbsp <a href="https://github.com/jasonyzhang/relpose">code </a> </p>
@@ -475,7 +568,7 @@ hideblock('neurips20audioBib');
 
 <!--------------------------------------------------------------------------->
 <div class="paper" id="corl20vime" data-selected="n">
-<img class="paper" src="https://thumbs.gfycat.com/ThreadbareOldfashionedDalmatian-size_restricted.gif" />
+<img class="paper" src="https://dhiraj100892.github.io/Visual-Imitation-Made-Easy/resources/dataset.gif" />
 <p><b id="papertitle">Visual Imitation Made Easy</b> <br/> 
 Sarah Young, Dhiraj Gandhi, <strong>Shubham Tulsiani</strong>, Abhinav Gupta, Pieter Abbeel, Lerrel Pinto <br/> 
 CORL, 2020 <br/> 
