--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ We do not have any short-term positions at this time.
 <!-- Topics we currently focus on include representation learning, robot learning, reinforcement learning, continual learning, 3D perception, generative modeling, modularity and curiosity-driven learning. -->
 </td></tr>
   <tr>
-    <td rowspan="1" width="50%">
+    <td>
       <b>PhD Students</b><br>
       <a href="https://homangab.github.io/">Homanga Bharadhwaj</a> (with Abhinav Gupta)<br>
       <a href="https://hzhupku.github.io/">Hanzhe Hu</a><br>
@@ -111,6 +111,9 @@ We do not have any short-term positions at this time.
       <a href="https://judyye.github.io/">Yufei (Judy) Ye</a> (with Abhinav Gupta)<br>
       <a href="https://jasonyzhang.com/">Jason Zhang</a>  (with Deva Ramanan)
     </td>
+    </tr>
+    <tr><td><br></td></tr>
+    <tr>
     <td>
       <b>MS Students</b><br>
       <a href="https://thatbrguy.github.io/">Bharath Raj</a> (MSR)<br>
@@ -118,7 +121,7 @@ We do not have any short-term positions at this time.
     </td>
   </tr>
   <tr><td><br></td></tr>
-  <tr><td colspan="2"><b>Alumni</b><br>
+  <tr><td><b>Alumni</b><br>
     <a href="https://www.zhiz.dev/">Zhizhuo (Z) Zhou</a>, 
     <a href="https://serverprocessor.wordpress.com/">Naveen Venkat</a>,
     <a href="https://mayankgrwl97.github.io/">Mayank Agarwal</a> <br>
@@ -234,6 +237,29 @@ ICRA, 2023 <br/>
 }</pre></td>
 <script language="javascript" type="text/javascript" xml:space="preserve">
 hideblock('icra23affordanceBib');
+</script>
+</div>
+</div>
+<!--------------------------------------------------------------------------->
+
+<!--------------------------------------------------------------------------->
+<div class="paper" id="iclr23analogical" data-selected="n">
+<img class="paper" src="https://nickgkan.github.io/teasers/iclr23_mem.gif" />
+<p> <strong style="color:red">[New]</strong> <b id="papertitle">Analogy-Forming Transformers for Few-Shot 3D Parsing</b> <br/> 
+Nikolaos Gkanatsios*, Mayank Singh*, Zhaoyuan Fang, <strong>Shubham Tulsiani</strong>, Katerina Fragkiadaki <br/> 
+ICLR, 2023 <br/> 
+<a href="https://arxiv.org/pdf/2304.14382.pdf">pdf </a>  &nbsp <a href="https://analogicalnets.github.io/">project page </a>  &nbsp <a href="javascript:toggleblock('iclr23analogicalBib')">bibtex </a>  &nbsp <a href="https://github.com/nickgkan/analogicalnets">code </a> </p>
+<div class="papermeta" id="iclr23analogicalMeta">
+<pre xml:space="preserve" id="iclr23analogicalBib">
+
+@article{gkanatsios2023analogical,
+  author    = {Gkanatsios, Nikolaos and Singh, Mayank and Fang, Zhaoyuan and Tulsiani, Shubham and Fragkiadaki, Katerina},
+  title     = {Analogy-Forming Transformers for Few-Shot 3D Parsing},
+  journal   = {ICLR},
+  year      = {2023},
+}</pre></td>
+<script language="javascript" type="text/javascript" xml:space="preserve">
+hideblock('iclr23analogicalBib');
 </script>
 </div>
 </div>
